example/secondfile/objects/Canvas_Debug_log__c.object
<CustomObject>
    <description>This Object will store the User, Quote ID details</description>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the Quote record</description>
        <label>Quote Id</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Canvas Debug logs</relationshipLabel>
        <relationshipName>Canvas_Debug_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field for the name of the user</description>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Canvas_Debug_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Canvas Debug log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDL-{0000000}</displayFormat>
        <label>Canvas Debug log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Debug logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>